# rag

./: .env  pyproject.toml  requirements.txt
app/: corpus_state.py  ingestion_jobs.py  rag_pipeline.py
app/api/: main.py
app/data/: evaluation_dataset.py
app/evaluation/: evaluate.py  experiment_runner.py  manual_eval.py  ragas_eval.py  test_bm25.py  test_hybrid.py  test_reranker.py  test_rrf.py
app/ingestion/: chunker.py  chunking_strategy.py  embedder.py  fixed_chunker.py  loader.py  pipeline.py  runtime_ingest.py  semantic_chunker.py
app/llm/: generator.py
app/retrieval/: bm25_retriever.py  hybrid_fusion_retriever.py  hybrid_retriever.py  production_retriever.py  qdrant_client.py  query_engine.py  reranker.py  retriever.py  rrf_fusion.py
app/utils/: config.py
data/qdrant_db/: meta.json
data/qdrant_db/collection/rag_collection/: storage.sqlite
data/vector_store/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/docintel/: pdf-viewer-pane.tsx  rag-workspace.tsx
frontend/src/lib/: api.ts  config.ts
notebooks/: document.ipynb  pdf_loader.ipynb
